# pyscv

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml  settings.yml
.github/workflows/: audit.yml  codeql.yml  coverage-comment.yml  dependency-review.yml  gitleaks.yml  lint.yml  osv-scan.yml  pre-commit.yml  release.yml  scorecard.yml  security-lint.yml  test-report.yml  test.yml  typecheck.yml
scripts/: audit.py  download_artifacts.py  download_proofs.py  regen_requirements.py
src/pyscv/: __init__.py  config.py  download_artifacts.py  download_proofs.py  net.py
tests/: test_download_artifacts.py  test_download_proofs.py  test_net.py
